    then fail-over is always allowed.

* XINS/Java Client Framework:
  - Applied some refactorings and improved documentation.

* Logdoc
  - Removed unused log entries.

* Generated specification documentation:
  - Fixed the API owner is now printed correctly on the API page.
    This bug has been in XINS since version 0.207.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.207:

* XINS/Java Server Framework:
  - Removed the getCallResult() method from CallContext as it's not used.
  - Caught BootstrapExceptions and Throwables are now handled in a similar
    way.
  - Removed some TODOs that are no longer relevant.
  - Check the state of API and APIServlet before calling a method.
  - Used another system to suspend any call to an API when the statistics
    are reset.
  - Removed _PerformGC metafunction.
  - Removed support for XSLT transformations.
  - Changed access level of field _api in class Function from protected to
    private. Subclasses should use getAPI() to get a reference to the API
    object. This may break existing code.
  - Removed the "org.xins.server.output.compatibility" property.
  - The returned output stream from the Servlet is now closed instead of
    being only flushed.
  - Fixed some Checkstyle-reported issues, like missing Javadoc comments.

* XINS/Java Common Library:
  - Completely refactored the service calling framework.
  - Narrowed the definition of a service caller to TCP-based services.
  - Moved the HTTPServiceCaller and supporting classes from package
    org.xins.common.service.http to org.xins.common.http.
  - Fixed argument for log message 3312. Now actually sending the URL instead
    of the textual representation of the TargetDescriptor.
  - Minor change to translation of log messages 3312 and 3313.
  - Changed the interface and rewrote the implementation of the service caller
    framework in package org.xins.common.service.