@@ -21,6 +21,10 @@ CHANGES INTRODUCED IN XINS 0.208:
   - Fixed the API owner is now printed correctly on the API page.
     This bug has been in XINS since version 0.207.
 
+* Build and release process:
+  - Added the possibility to release with a specific version
+    (e.g. 1.0.0Beta2).
+
 ______________________________________________________________________________
 CHANGES INTRODUCED IN XINS 0.207:
 
